; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_mq.c_skynet_mq_overload.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_mq.c_skynet_mq_overload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.message_queue = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skynet_mq_overload(%struct.message_queue* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.message_queue*, align 8
  %4 = alloca i32, align 4
  store %struct.message_queue* %0, %struct.message_queue** %3, align 8
  %5 = load %struct.message_queue*, %struct.message_queue** %3, align 8
  %6 = getelementptr inbounds %struct.message_queue, %struct.message_queue* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.message_queue*, %struct.message_queue** %3, align 8
  %11 = getelementptr inbounds %struct.message_queue, %struct.message_queue* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %4, align 4
  %13 = load %struct.message_queue*, %struct.message_queue** %3, align 8
  %14 = getelementptr inbounds %struct.message_queue, %struct.message_queue* %13, i32 0, i32 0
  store i32 0, i32* %14, align 4
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
